snapshot restore doesn't restore some indices #8397